data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1459.wast
;; 10. **Test Description**: Develop a function where a `br_if` instruction deals with the maximum depth of supported nested structures. Purposefully create an instruction to exceed the depth leading to either particular error handling or malfunction, providing insight into stack handling limitations.   - **Constraint Being Checked**: Upper bounds of nesting depth and corresponding stack management.   - **Stack Corruption Aspect**: Issues in managing maximum stack depth correctly result in overflow conditions and undefined execution behavior.

(assert_invalid
  (module
    (func $test-max-depth-nest
      (block
        (block
          (block
            (block
              (block
                (block
                  (block
                    (block
                      (block
                        (block
                          (br_if 10 (i32.const 1))
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
  "unknown label"
)